packages/cjs-to-esm/test/snapshots/package-corpus/core-js/stable/error/constructor.js
import parent from "../../es/error/constructor";
const _cjs_default = parent;
export default _cjs_default;
